# nmea

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
c/: .clang-format  Makefile  README.md  compile_commands.json
c/src/: nmea.c  nmea.h
c/tests/: test_nmea.c
python/: README.md  pyproject.toml
python/src/: nmea.py
python/tests/: test_nmea.py
typescript/: README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/src/__tests__/: index.test.ts
